--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,179 @@
-streamlit
-language-tool-python
+absl-py==2.1.0
+altair==5.3.0
+annotated-types==0.7.0
+anyio==4.4.0
+appdirs==1.4.4
+astunparse==1.6.3
+attrs==23.2.0
+beautifulsoup4==4.12.3
+blinker==1.8.2
+blis==0.7.11
+cachetools==5.3.3
+catalogue==2.0.10
+catboost==1.2.5
+certifi==2024.7.4
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpathlib==0.18.1
+colorama==0.4.6
+confection==0.1.5
+contourpy==1.2.1
+cycler==0.12.1
+cymem==2.0.8
+distro==1.9.0
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
+et-xmlfile==1.1.0
+filelock==3.15.4
+Flask==3.0.3
+Flask-Cors==4.0.1
+flatbuffers==24.3.25
+fonttools==4.53.1
+frozendict==2.4.4
+fsspec==2024.6.1
+ftfy==6.2.3
+gast==0.6.0
+gensim==4.3.2
+gitdb==4.0.11
+GitPython==3.1.43
+google-ai-generativelanguage==0.6.6
+google-api-core==2.19.1
+google-api-python-client==2.142.0
+google-auth==2.34.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.7.2
+google-pasta==0.2.0
+googleapis-common-protos==1.63.2
+graphviz==0.20.3
+grpcio==1.64.1
+grpcio-status==1.62.3
+h11==0.14.0
+h5py==3.11.0
+html5lib==1.1
+httpcore==1.0.5
+httplib2==0.22.0
+httpx==0.27.0
+huggingface-hub==0.23.4
+idna==3.7
+importlib_metadata==8.5.0
+intel-openmp==2021.4.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+keras==3.4.1
+kiwisolver==1.4.5
+langcodes==3.4.0
+language_data==1.2.0
+language_tool_python==2.8.1
+libclang==18.1.1
+lightgbm==4.4.0
+locate==1.1.1
+lxml==5.3.0
+marisa-trie==1.2.0
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.1
+mdurl==0.1.2
+mkl==2021.4.0
+ml-dtypes==0.4.0
+mpmath==1.3.0
+msgpack==1.0.8
+multitasking==0.0.11
+murmurhash==1.0.10
+mxnet==1.2.0
+mysql-connector-python==9.0.0
+namex==0.0.8
+networkx==3.3
+nltk==3.8.1
+numpy==1.26.4
+openai==1.35.13
+openpyxl==3.1.5
+opt-einsum==3.3.0
+optree==0.12.1
+packaging==24.1
+pandas==2.2.2
+peewee==3.17.6
+pillow==10.4.0
+platformdirs==4.2.2
+plotly==5.22.0
+preshed==3.0.9
+proto-plus==1.24.0
+protobuf==4.25.3
+pyarrow==16.1.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pydantic==2.8.2
+pydantic_core==2.20.1
+pydeck==0.9.1
+pyee==11.1.1
+Pygments==2.18.0
+pyparsing==3.1.2
+pyppeteer==2.0.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.1
+PyYAML==6.0.1
+referencing==0.35.1
+regex==2024.5.15
+requests==2.32.3
+rich==13.7.1
+rpds-py==0.19.0
+rsa==4.9
+safetensors==0.4.3
+scikit-learn==1.5.1
+scipy==1.14.0
+seaborn==0.13.2
+setuptools==70.3.0
+shellingham==1.5.4
+six==1.16.0
+smart-open==7.0.4
+smmap==5.0.1
+sniffio==1.3.1
+soupsieve==2.6
+spacy==3.7.5
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.4.8
+streamlit==1.36.0
+sympy==1.13.0
+tbb==2021.13.0
+tenacity==8.5.0
+tensorboard==2.17.0
+tensorboard-data-server==0.7.2
+tensorflow==2.17.0
+tensorflow-intel==2.17.0
+termcolor==2.4.0
+textblob==0.18.0.post0
+thinc==8.2.5
+threadpoolctl==3.5.0
+tokenizers==0.19.1
+toml==0.10.2
+toolz==0.12.1
+torch==2.3.1
+torchaudio==2.3.1
+torchvision==0.18.1
+tornado==6.4.1
+tqdm==4.66.4
+transformers==4.42.4
+typer==0.12.3
+typing_extensions==4.12.2
+tzdata==2024.1
+uritemplate==4.1.1
+urllib3==1.26.20
+vboxapi==1.0
+wasabi==1.1.3
+watchdog==4.0.1
+wcwidth==0.2.13
+weasel==0.4.1
+webencodings==0.5.1
+websockets==10.4
+Werkzeug==3.0.3
+wheel==0.43.0
+word2number==1.1
+wordfreq==3.1.1
+wrapt==1.16.0
+xgboost==2.1.0
+yfinance==0.2.42
+zipp==3.20.2
